Feat: Add task detail route
